--- a/src/main/resources/static/map/css/styles.css
+++ b/src/main/resources/static/map/css/styles.css
@@ -16,7 +16,45 @@ header {
     width: 500px;
 }
 
+.recently-keyword-wrapper {
+    margin-top: 10px;
+}
+
 .results.search-result-box {
     position: inherit !important;
     width: inherit !important;
+}
+
+#searchResultList .item {
+    padding: 15px 20px;
+    border-top: 1px solid #ececec;
+}
+
+#searchResultList .description {
+    margin-top: 3px;
+}
+
+a.header.place-link {
+    display: inline !important;
+    color: #4183c4 !important;
+}
+
+.no-search-result {
+    padding: 100px 0;
+    font-size: 30px;
+    text-align: center;
+}
+
+.view-more {
+    padding: 30px 0;
+    text-align: center;
+    font-size: 20px;
+}
+
+.map-link {
+    margin-left: 10px;
+}
+
+footer {
+    height: 100px;
 }
