- 검색 히스토리 뷰 변경  - 인기 검색어 추가  - 검색 히스토리 Pageable추가  - semantic ui 추가

--- a/src/main/resources/static/map/css/styles.css
+++ b/src/main/resources/static/map/css/styles.css
@@ -16,13 +16,17 @@ header {
     width: 500px;
 }
 
-.recently-keyword-wrapper {
-    margin-top: 10px;
-}
-
 .results.search-result-box {
     position: inherit !important;
     width: inherit !important;
+}
+
+.search-result-box #searchResultList .item .content {
+    line-height: 20px;
+}
+
+.search-result-box .external.alternate.icon {
+    margin-left: 5px;
 }
 
 #searchResultList .item {
@@ -34,9 +38,15 @@ header {
     margin-top: 3px;
 }
 
-a.header.place-link {
+.colspanText {
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.place-name {
     display: inline !important;
-    color: #4183c4 !important;
 }
 
 .no-search-result {
@@ -49,6 +59,7 @@ a.header.place-link {
     padding: 30px 0;
     text-align: center;
     font-size: 20px;
+    cursor: pointer;
 }
 
 .map-link {
